[project]
name = "vellox"
version = "0.2.0"
description = "GCP Cloud Functions support for ASGI applications"
authors = [
    {name = "junah201", email = "junah.dev@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask>=2.2.5,<4.0.0",
    "typing_extensions>=4.7.1,<5",
]

[project.urls]
Homepage = "https://vellox.junah.dev"
Repository = "https://github.com/junah201/vellox"
Documentation = "https://vellox.junah.dev"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.17,<10",
    "mkdocstrings>=0.24.3,<1",
    "mkautodoc>=0.2.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
extend-exclude = [
    "docs/*"
]
